--- a/index.html
+++ b/index.html
@@ -502,21 +502,129 @@
       </div>
    </section>
 
+   <!--Testimonial Start-->
+   <section class="testimonial pt-lg-0">
+      <div class="container">
+         <div class="row">
+            <div class="col-lg-12">
+               <div class="pq-section pq-style-1 text-center">
+                  <!-- <span class="pq-section-sub-title">Testimonials</span> -->
+                  <h5 class="pq-section-title">Testimonials</h5>
+               </div>
+   
+               <div class="owl-carousel owl-theme" data-dots="false" data-nav="true" data-desk_num="4" data-lap_num="4"
+                  data-tab_num="3" data-mob_num="1" data-mob_sm="1" data-autoplay="true" data-loop="true" data-margin="30">
+                  <div class="item">
+                     <div class="pq-testimonial-box pq-style-1">
+                        <div class="pq-testimonial-info">
+                           <div class="pq-testimonial-content">
+                              <div class="pq-testimonial-icon">
+                                 <i class="fas fa-quote-left"></i>
+                              </div>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the
+                                 majority
+                                 have suffered alteration in some form, by injected humour, or randomized
+                                 words
+                                 which don’t look even believable. There are many variations of passages.</p>
+                           </div>
+                        </div>
+                        <div class="pq-testimonial-media">
+   
+                           <div class="pq-testimonial-meta">
+                              <h5>Dr. john Martin</h5>
+                              <span>Cancer Research </span>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="pq-testimonial-box pq-style-1">
+                        <div class="pq-testimonial-info">
+                           <div class="pq-testimonial-content">
+                              <div class="pq-testimonial-icon">
+                                 <i class="fas fa-quote-left"></i>
+                              </div>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the
+                                 majority
+                                 have suffered alteration in some form, by injected humour, or randomized
+                                 words
+                                 which don’t look even believable. There are many variations of passages.</p>
+                           </div>
+                        </div>
+                        <div class="pq-testimonial-media">
+   
+                           <div class="pq-testimonial-meta">
+                              <h5>Dr. john Martin</h5>
+                              <span>Cancer Research </span>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="pq-testimonial-box pq-style-1">
+                        <div class="pq-testimonial-info">
+                           <div class="pq-testimonial-content">
+                              <div class="pq-testimonial-icon">
+                                 <i class="fas fa-quote-left"></i>
+                              </div>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the
+                                 majority
+                                 have suffered alteration in some form, by injected humour, or randomized
+                                 words
+                                 which don’t look even believable. There are many variations of passages.</p>
+                           </div>
+                        </div>
+                        <div class="pq-testimonial-media">
+   
+                           <div class="pq-testimonial-meta">
+                              <h5>Dr. john Martin</h5>
+                              <span>Cancer Research </span>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <style>
+                  .owl-carousel .owl-nav {
+                     position: absolute;
+                     top: 50%;
+                     width: 100%;
+                     display: flex;
+                     justify-content: space-between;
+                     transform: translateY(-50%);
+                  }
+               
+                  .owl-carousel .owl-nav button {
+                     background: rgba(0, 0, 0, 0.5);
+                     color: white;
+                     border: none;
+                     padding: 10px;
+                     border-radius: 50%;
+                     font-size: 20px;
+                     cursor: pointer;
+                  }
+               </style>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!--Testimonial End-->
+
    <!-- Portfolio Start -->
    <section class="our-work">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
                <div class="pq-section pq-style-1 text-center">
-                  <span class="pq-section-sub-title">our portfolio</span>
-                  <h5 class="pq-section-title">Shorts Video Showcase</h5>
+                  <!-- <span class="pq-section-sub-title">our portfolio</span> -->
+                  <h5 class="pq-section-title">Patient’s review</h5>
                </div>
             </div>
             <div class="col-lg-12">
-               <div class="owl-carousel owl-loaded owl-drag" data-dots="true" data-nav="true"
+               <div class="owl-carousel owl-loaded owl-drag" data-dots="false" data-nav="true"
                   data-nav-text='["<i class=\"ion ion-ios-arrow-back\"></i>", "<i class=\"ion ion-ios-arrow-forward\"></i>"]'
                   data-desk_num="4" data-lap_num="4" data-tab_num="3" data-mob_num="1" data-mob_sm="1"
-                  data-autoplay="true" data-loop="false" data-margin="30">
+                  data-autoplay="true" data-loop="true" data-margin="30">
                   <div class="item">
                      <div class="pq-portfoliobox pq-style-1">
                         <div class="pq-portfolio-block">
